router/apollo-router/src/plugins/telemetry/metrics/snapshots/apollo_router__plugins__telemetry__metrics__apollo__test__apollo_metrics_exclude.snap
---
source: apollo-router/src/plugins/telemetry/metrics/apollo.rs
expression: results
---
[
  {
    "request_id": "[REDACTED]",
    "stats": {},
    "licensed_operation_count_by_type": {
      "type": "query",
      "subtype": null,
      "licensed_operation_count": 1
    }
  }
]
