router/apollo-router/src/plugins/telemetry/metrics/snapshots/apollo_router__plugins__telemetry__metrics__apollo__test__apollo_metrics_parse_failure.snap
---
source: apollo-router/src/plugins/telemetry/metrics/apollo.rs
expression: results
---
[
  {
    "request_id": "[REDACTED]",
    "stats": {
      "## GraphQLParseFailure\n": {
        "stats_with_context": {
          "context": {
            "client_name": "test_client",
            "client_version": "1.0-test",
            "operation_type": "query",
            "operation_subtype": ""
          },
          "query_latency_stats": {
            "latency": {
              "secs": 0,
              "nanos": 100000000
            },
            "cache_hit": false,
            "persisted_query_hit": null,
            "cache_latency": null,
            "root_error_stats": {
              "children": {},
              "errors_count": 0,
              "requests_with_errors_count": 0
            },
            "has_errors": true,
            "public_cache_ttl_latency": null,
            "private_cache_ttl_latency": null,
            "registered_operation": false,
            "forbidden_operation": false,
            "without_field_instrumentation": false
          },
          "per_type_stat": {}
        },
        "referenced_fields_by_type": {}
      }
    },
    "licensed_operation_count_by_type": null
  }
]
